--- a/config.json
+++ b/config.json
@@ -4,6 +4,6 @@
       "port": "3306",
       "user": "root",
       "password": "1234",
-      "database": "SullanoAPI"
+      "database": "SullanoDB"
   }
 }
