--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server.js",
-    "start-dev": "nodemon ./server.js"
+    "build": "tsc",
+    "start": "ts-node ./server.ts",
+    "start-dev": "nodemon ./server.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,9 @@
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2"
   }
 }
